Perkin-UAT/force-app/main/default/objects/Campaign_Cost__c/fields/Campaign_Item__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Item__c</fullName>
    <label>Campaign Item</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Costs</relationshipLabel>
    <relationshipName>R00N30000000rzvsEAA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>