Perkin-UAT/force-app/main/default/objects/Campaign_Cost__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entered in Gelco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>